# rdr

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  build.rs  deny.toml  eslint.config.mjs  icon.sh  nuxt.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.js
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: workflow.yaml
app/components/: CategoryDialog.vue  CategoryInput.vue  ChangePasswordForm.vue  ClientAgo.vue  ClientDateTime.vue  DateTime.client.vue  DistanceToNow.client.vue  DurationToNow.client.vue  EntryContent.vue  ExternalAnchor.vue  ExternalLink.vue  FeedDialog.vue  FeedIcon.vue  JobToggle.vue  LoginPage.vue  LogoutButton.vue  MarkedText.vue  NavTabs.vue  TimeAgo.client.vue  UnreadCount.client.vue  UnreadCount.vue  (+7 more)
components/: ClientDateTime.vue  ClientSideDateTime.vue  Count.vue  EntryCheckbox.vue  EntryContent.vue  FeedData.vue  FeedMetadata.vue  MarkedText.vue  Nav.vue  NavTabs.vue  RefreshAll.vue  RefreshCategory.vue  RefreshFeed.vue
migrations/: 0001-initial.sql
pages/: feeds.vue  index.vue  local-settings.js  settings.vue
shared/: index.d.ts
src/: app-config.service.ts  app.controller.spec.ts  app.controller.ts  app.module.ts  categories.controller.ts  entities.rs  entities.ts  entries.controller.ts  feed-cache.service.ts  feed.service.ts  feeds.controller.ts  main.rs  main.ts  mutex-map.ts  opml.service.ts  repository.rs  serve.rs
templates/: feeds.j2  index.j2  nav.j2
test/: app.e2e-spec.ts
types/: index.d.ts
(+219 files in other folders)
