[package]
name = "rdr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = "0.8.4"
bon = "3.7.1"
clap = { version = "4.5.45", features = ["derive", "env"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
no_color = "0.2.0"
opml = "1.1.6"
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
