[package]
name = "rdr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive", "env"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
no_color = "0.2.0"
opml = "1.1.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
